--- a/bower.json
+++ b/bower.json
@@ -13,10 +13,11 @@
     "purescript-arrays": "^4.1.0",
     "purescript-strings": "^3.2.1",
     "purescript-exceptions": "^3.0.0",
-    "purescript-transformers": "^3.4.0",
-    "purescript-lists": "^4.7.0"
+    "purescript-transformers": "^3.4.0"
   },
   "devDependencies": {
-    "purescript-psci-support": "^3.0.0"
+    "purescript-psci-support": "^3.0.0",
+    "purescript-quickcheck": "^4.4.0",
+    "purescript-test-unit": "^11.0.0"
   }
 }
