--- a/bower.json
+++ b/bower.json
@@ -8,16 +8,13 @@
   ],
   "dependencies": {
     "purescript-prelude": "^3.0.0",
-    "purescript-console": "^3.0.0",
-    "purescript-random": "^3.0.0",
     "purescript-arrays": "^4.1.0",
-    "purescript-strings": "^3.2.1",
-    "purescript-exceptions": "^3.0.0",
-    "purescript-transformers": "^3.4.0"
+    "purescript-strings": "^3.2.1"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
     "purescript-quickcheck": "^4.4.0",
-    "purescript-test-unit": "^11.0.0"
+    "purescript-test-unit": "^11.0.0",
+    "purescript-unsafe-coerce": "^3.0.0"
   }
 }
