--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "purescript-prelude": "^3.0.0",
     "purescript-arrays": "^4.1.0",
-    "purescript-strings": "^3.2.1"
+    "purescript-strings": "^3.2.1",
+    "purescript-argonaut-codecs": "^3.2.0"
   },
   "devDependencies": {
     "purescript-psci-support": "^3.0.0",
