--- a/bower.json
+++ b/bower.json
@@ -7,15 +7,10 @@
     "output"
   ],
   "dependencies": {
-    "purescript-prelude": "^3.0.0",
-    "purescript-arrays": "^4.1.0",
-    "purescript-strings": "^3.2.1",
-    "purescript-argonaut-codecs": "^3.2.0"
-  },
-  "devDependencies": {
-    "purescript-psci-support": "^3.0.0",
-    "purescript-quickcheck": "^4.4.0",
-    "purescript-test-unit": "^11.0.0",
-    "purescript-unsafe-coerce": "^3.0.0"
+    "purescript-prelude": "^4.1",
+    "purescript-arrays": "^5.0",
+    "purescript-strings": "^4.0",
+    "purescript-argonaut-codecs": "^4.0",
+    "purescript-exceptions": "^4.0.0"
   }
 }
